Use new Files#writeString method